--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.main-container {
+    margin-top: 4rem;
+}
+
 .component-enabled .icon-span {
     color: #007bff;
 }
@@ -9,4 +13,30 @@
 
 .alert {
     overflow-wrap: break-word;
+}
+
+.form-spacer {
+    height: 4rem;
+}
+
+header h1 {
+    font-size: 4.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+@media (max-width: 576px) {
+    .main-container {
+        margin-top: 2rem;
+    }
+
+    .form-spacer {
+        height: 3rem;
+    }
+
+    header h1 {
+        font-size: 3.5rem;
+        font-weight: 300;
+        line-height: 1.2;
+    }
 }
