--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,12 @@
 }
 
 .component-enabled .icon-span {
-    color: #007bff;
+    color: #6b11ff;
 }
 
 .component-enabled h4 {
     font-weight: bold;
-    color: #007bff !important;
+    color: #6b11ff !important;
 }
 
 .alert {
